--- a/src/stylesheets/themes/_light-darwin.scss
+++ b/src/stylesheets/themes/_light-darwin.scss
@@ -180,8 +180,8 @@ $find-input-loading-x:        4px;
 $find-input-not-found-color:  $text-color;
 $find-input-not-found-bg:     tint(#f66, 75%);
 
-$split-toolbar-btn-margin:                 0 6px;
-$split-toolbar-btn-wrap-containers-margin: 0 33px 0 8px;
+$findbar-split-toolbar-btn-margin:                 0 8px;
+$findbar-split-toolbar-btn-wrap-containers-margin: 0 33px 0 8px;
 
 $findbar-toolbar-label-margin: 0 11px 0 0;
 
