--- a/src/stylesheets/themes/_light-generic.scss
+++ b/src/stylesheets/themes/_light-generic.scss
@@ -178,8 +178,8 @@ $find-input-loading-x:        3px;
 $find-input-not-found-color:  $text-color;
 $find-input-not-found-bg:     tint(#f66, 75%);
 
-$split-toolbar-btn-margin:                 null;
-$split-toolbar-btn-wrap-containers-margin: 0 31px 0 8px;
+$findbar-split-toolbar-btn-margin:                 null;
+$findbar-split-toolbar-btn-wrap-containers-margin: 0 31px 0 8px;
 
 $findbar-toolbar-label-margin: 0 13px 0 0;
 
